# vim-specflow

./: .gitignore  CLAUDE.md  README.md
doc/: specflow.txt  tags
ftdetect/: specflow.vim
ftplugin/: specflow.vim
plugin/: specflow.vim
rust/specflow-helper/: Cargo.toml
rust/specflow-helper/examples/: check_feature.rs  corpus_smoke.rs  corpus_unbound.rs
rust/specflow-helper/src/: cache.rs  feature.rs  index.rs  lib.rs  main.rs  matcher.rs  parser.rs
rust/specflow-helper/tests/: cli_tests.rs  corpus_snapshot_tests.rs  feature_tests.rs  index_tests.rs  matcher_tests.rs  parser_tests.rs  smoke_corpus_tests.rs
rust/specflow-helper/tests/fixtures/: gnarly_bindings.cs
rust/specflow-helper/tests/fixtures/smoke_corpus/: Smoke.feature  SmokeBindings.cs
syntax/: specflow.vim
