[package]
name = "specflow-helper"
version = "0.1.0"
edition = "2021"
description = "Indexing and matching backend for the vim-specflow plugin"
license = "MIT OR Apache-2.0"

[lib]
name = "specflow_helper"
path = "src/lib.rs"

[[bin]]
name = "specflow-helper"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
